--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,17 @@
-<h1>
-  {{title}}
-</h1>
+<div class="wrapper">
+  <div class="header">
+    <app-header></app-header>
+  </div>
+  <div class="wrap_content">
+    <div class="side_bar">
+      <app-tool (changeSizeMiddle)="setSize($event)" (changeSizeBig)="setSize($event)"></app-tool>
+    </div>
+    <div class="play_field">
+      <app-play [size]="size"></app-play>
+    </div>
+  </div>
+  <div class="footer">
+    <app-footer></app-footer>
+  </div>
+  
+</div>
