--- a/src/app/play/play.component.css
+++ b/src/app/play/play.component.css
@@ -8,7 +8,7 @@ td{
    border: 1px solid black;
    opacity: 1;
    transition: opacity 2.9s;
-   background-image: url('../../assets/back.jpg');
+   background-image: url('assets/back.jpg');
    z-index: 1;
 }
 
@@ -84,7 +84,7 @@ td.hide{
 .standBy{
     width:641px;
     height:540px;
-    background-image: url('../../assets/min.jpg');;
+    background-image: url('assets/min.jpg');;
     position: absolute;
     margin-top: 60px;
     margin-left: 50px;
