--- a/src/app/play/play.component.css
+++ b/src/app/play/play.component.css
@@ -2,14 +2,20 @@
     margin: 0;
     padding:0;
 }
+table{
+    border: 4px solid orangered;
+    border-radius: 8px;
+}
 td{
     width:64px;
     height: 64px;
    border: 1px solid black;
+   border-radius: 8px;
    opacity: 1;
    transition: opacity 2.9s;
    background-image: url('assets/back.jpg');
    z-index: 1;
+   
 }
 
 img{
@@ -18,12 +24,12 @@ img{
 
 img.open{
     display: block;
-    z-index: 2;
+    z-index: 2;  
 }
 td.hide{
    background-color: red;
    opacity: 0;
-    
+   pointer-events: none;  
 }
 
 .btn{
@@ -84,11 +90,12 @@ td.hide{
 .standBy{
     width:641px;
     height:540px;
-    background-image: url('assets/min.jpg');;
+    background-image: url('assets/min.jpg');
     position: absolute;
     margin-top: 60px;
     margin-left: 50px;
 }
+
 .tools {
     background-color: gray;
     padding:10px 0 10px 0;
